# Chung_Lu_Chain-synthesizer

./: .gitignore  .readthedocs.yaml  demo.ipynb  demo1.py  demo2.py  demo4.py  demo5.py  demo6.py  demo7.py  demo8.py  ieee_test.ipynb  pyproject.toml  readme.md  synthetic_grid.m
.github/workflows/: ci.yml
demos/: demo.ipynb  demo1.py  demo2.py  demo3.py  demo4.py  demo5.py  demo6.py  demo7.py  demo8.py  demo_distribution_synth.py  ieee_dcpf_test.py
docs/: README.md  api_reference.md  bibliography.rst  conf.py  index.rst  references.bib  requirements.txt
docs/_static/: custom.css
docs/examples/: BusTypeAssignment.nblink  CLC4Distribution.nblink  DistributionSynth.nblink  DistributionSynthFromRef.nblink  DistributionSynthPypowsybl.nblink  GenLoadSettings.nblink  IEEETest.nblink  Pegase9241Test.nblink  RTE7000Test.nblink  Synthesize.nblink  SynthesizePypowsybl.nblink  TopologyGeneration.nblink  distribution.rst  index.rst  intro.rst  transmission.rst
docs/reference/: api_reference.md
docs/theory/: ais_bus_type_assignment.rst  bus_type_assignment.rst  distribution.rst  distribution_feeder_generation.rst  gen_dispatch_transmission.rst  generation_load_settings.rst  index.rst  topology_generation.rst  transmission.rst
examples/: BusTypeAssignment.ipynb  GenLoadSettings.ipynb  Synthesize.ipynb  TopologyGeneration.ipynb  hodge_analysis.ipynb  ieee118_syn.json  ieee118_syn.mat  ieee118_syn.xiidm  ieee118_syn_EQ.xml  ieee118_syn_SSH.xml  ieee118_syn_SV.xml  ieee118_syn_TP.xml  ieee118_synthetic.xiidm  ieee118_test.json  ieee_test.ipynb  pegase9241_test.ipynb
examples/colab/: BusTypeAssignment_colab.ipynb  GenLoadSettings_colab.ipynb  (+3 more)
output/: synthetic_grid.json
powergrid_synth/: __init__.py  analysis.py  bus_type_allocator.py  capacity_allocator.py  comparison.py  data_format_converter.py  dcpf.py  deg_dist_optimizer.py  edge_creation.py  exporter.py  generation_dispatcher.py  generator.py  grid_graph.py  hierarchical_analysis.py  input_configurator.py  input_extractor.py  load_allocator.py  preprocessing.py  synthesize.py  transformer_edges.py  transmission.py  visualization.py  visualization_old.py
synthetic_grid_pandapower/: bus.csv  line.csv  load.csv  sgen.csv
tests/: conftest.py  test_analysis.py  test_bus_type_allocation.py  test_bus_type_visualization.py  test_capacity_allocator.py  test_comparison.py  test_data_format_converter.py  test_dcpf.py  test_deg_dist_optimizer.py  test_distribution.py  test_edge_creation.py  test_exporter.py  test_generation_dispatch.py  test_generator.py  test_grid_graph.py  test_hierarchical_analysis.py  test_input_config.py  test_input_extractor.py  test_integration.py  test_load_allocator.py  test_preprocessing.py  test_reference_data.py  test_synthesize.py  test_transformer_edges.py  test_transmission.py
(+127 files in other folders)
