[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "powergrid_synth"
version = "0.1.0"
description = "Synthetic power grid generator based on Chung-Lu-Chain model and MATPOWER SynGrid." 
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21",
    "networkx>=3.0",
    "scipy>=1.7",
    "matplotlib>=3.5",
    "pandas>=1.3"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "build"
]

[project.urls]
"Homepage" = "https://github.com/cookbook-ms/Chung_Lu_Chain-synthesizer"
"Documentation" = "https://power-grid-synthesizer.readthedocs.io/en/latest/"
"Bug Tracker" = "https://github.com/cookbook-ms/Chung_Lu_Chain-synthesizer/issues"