[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "powergrid_synth"
version = "0.1.0"
description = "Synthetic power grid generator based on Chung-Lu-Chain model and MATPOWER SynGrid." 
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0",
    "networkx>=3.5",
    "scipy>=1.16",
    "matplotlib>=3.5",
    "pandas==2.3.3",
    "pandapower==3.3.0",
    "numba",
    "lightsim2grid"
]


[tool.setuptools.packages.find]
where = ["."] 
include = ["powergrid_synth*"] 
exclude = ["demos*", "tests*"] 

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "build"
]

[project.urls]
"Homepage" = "https://github.com/cookbook-ms/Chung_Lu_Chain-synthesizer"
"Documentation" = "https://power-grid-synthesizer.readthedocs.io/en/latest/"
"Bug Tracker" = "https://github.com/cookbook-ms/Chung_Lu_Chain-synthesizer/issues"